# cmake_learn

./: .gitignore  README
01/: CMakeLists.txt  readme
02/: main.cpp  readme
03/: CMakeLists.txt  readme
04/: CMakeLists.txt  README
05/: README
05/lib/: hello.h
06/: CMakeLists.txt  README
06/lib/: CMakeLists.txt  hello.cpp
07/: CMakeLists.txt  README
07/src/: CMakeLists.txt
20/: README.md  main.cpp
